Make sure to set values to AppId and AppSecret in appsettings.json
Certificate thumbprints:

4f314b2dcb650ff0db1d4cea0e0afdb0e8e0de7e - domain cert
556bc17e1097cb13b59917789f466b1937c1fd29 - SF cluster cert

--- a/Samples/V1.0Samples/LocalMediaSamples/HueBot/HueBot/appsettings.json
+++ b/Samples/V1.0Samples/LocalMediaSamples/HueBot/HueBot/appsettings.json
@@ -10,9 +10,9 @@
   "Bot": {
     "AppId": "%AppId%",
     "AppSecret": "%AppSecret%",
-    "BotBaseUrl": "https://%CName%:9444/api/calls",
-    "BotMediaProcessorUrl": "net.tcp://%ServiceDns%:8445",
-    "Certificate": "ABC0000000000000000000000000000000000CBA",
+    "BotBaseUrl": "https://huebotsf.westus2.cloudapp.azure.com:9444/api/calls",
+    "BotMediaProcessorUrl": "net.tcp://huebotsf.westus2.cloudapp.azure.com:8445",
+    "Certificate": "4f314b2dcb650ff0db1d4cea0e0afdb0e8e0de7e",
     "PlaceCallEndpointUrl": "https://graph.microsoft.com/v1.0"
   }
 }
